// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`models 1`] = `
{
  "body": "",
  "headers": {},
  "method": "GET",
  "url": "http://localhost:11434/api/tags",
}
`;

exports[`models 2`] = `
{
  "body": "",
  "headers": {
    "authorization": "Bearer <key>",
    "content-type": "application/json",
  },
  "method": "GET",
  "url": "https://api.openai.com/v1/models",
}
`;

exports[`models 3`] = `
{
  "body": "",
  "headers": {
    "anthropic-version": "2023-06-01",
    "content-type": "application/json",
    "x-api-key": "<key>",
  },
  "method": "GET",
  "url": "https://api.anthropic.com/v1/models",
}
`;

exports[`dump 1`] = `
{
  "options": {},
  "params": {},
  "provider": "ollama",
  "type": "models",
  "version": "0.2.4",
}
`;

exports[`dump 2`] = `
{
  "options": {
    "apiKey": "<key>",
  },
  "params": {},
  "provider": "openai",
  "type": "models",
  "version": "0.2.4",
}
`;

exports[`dump 3`] = `
{
  "options": {
    "apiKey": "<key>",
  },
  "params": {},
  "provider": "anthropic",
  "type": "models",
  "version": "0.2.4",
}
`;
